[project]
name = "my-first-stelvio-app"
version = "0.1.0"
description = "A demo app to deploy  serverless apps to AWS using stelvio.dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stelvio>=0.5.0a7",
]

[tool.uv.sources]
stelvio = { git = "https://github.com/stelviodev/stelvio", rev = "main" }
